cmake_minimum_required(VERSION 3.24)
project(OOP_Ciocolata)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(OOP_Ciocolata
        .idea/.gitignore
        .idea/modules.xml
        ".idea/OOP Ciocolata.iml"
        .idea/workspace.xml
        exceptiival.h
        main.cpp
        produs.cpp
        produs.h
        produse.txt
        repofile.cpp
        repofile.h
        repofilemost.cpp
        repofilemost.h
        repository.cpp
        repository.h
        service.cpp
        service.h
        ui.cpp
        ui.h teste.h teste.cpp)
